# YaoList

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  README_cn.md  README_ja.md  build-linux-arm64.cmd  build-linux-riscv64.cmd  build-linux.cmd  build-windows-arm64.cmd  build-windows-x64.cmd  build-windows-x86.cmd  build.rs  main.rs
.cargo/: config.toml
drivers/: DRIVER_DEVELOPMENT.md  mod.rs
drivers/123openapi/: api.rs  driver.rs  mod.rs  types.rs  upload.rs
drivers/alist/: mod.rs
drivers/aliyun_open/: client.rs  driver.rs  mod.rs  types.rs  upload.rs
drivers/cloud189/: client.rs  driver.rs  login.rs  mod.rs  types.rs  upload.rs  utils.rs  writer.rs
drivers/ftp/: driver.rs  mod.rs
drivers/google_drive/: driver.rs  mod.rs
drivers/lanzou/: README.md  config.rs  driver.rs  factory.rs  mod.rs  types.rs  utils.rs
drivers/local/: driver.rs  mod.rs
drivers/onedrive/: driver.rs  mod.rs
drivers/onedrive_app/: api.rs  driver.rs  mod.rs  types.rs  writer.rs
drivers/pan115/: client.rs  crypto.rs  driver.rs  mod.rs  types.rs  writer.rs
drivers/pan115_share/: driver.rs  mod.rs
drivers/pan123_share/: driver.rs  mod.rs
drivers/pikpak/: client.rs  driver.rs  mod.rs  types.rs  util.rs  writer.rs
drivers/quark/: driver.rs  mod.rs  register.rs
drivers/s3/: config.rs  driver.rs  factory.rs  mod.rs
drivers/sftp/: driver.rs  mod.rs
drivers/smb/: driver_native.rs  mod.rs
drivers/thunder/: client.rs  driver.rs  mod.rs  types.rs
drivers/webdav/: driver.rs  mod.rs
drivers/yun139/: client.rs  driver.rs  mod.rs  types.rs  util.rs  writer.rs
frontend/: .gitignore  index.html  package.json  vite.config.js
frontend/src/: AdminPanel.vue  App.vue  FileDetail.vue  MainPage.vue  main.js  style.css
frontend/src/components/: GlobalNotification.vue  Login.vue  Register.vue
frontend/src/styles/: AdminPanel.css  MainPage.css
frontend/src/utils/: notification.js
scripts/: install.sh
src/: auth.rs  config.rs  db.rs  download.rs  geoip.rs  lib.rs  load_balance.rs  main.rs  models.rs  scheduler.rs  state.rs  utils.rs
src/api/: archive.rs  backup.rs  direct_links.rs  drivers.rs  file_resolver.rs  groups.rs  load_balance.rs  meta.rs  mod.rs  mounts.rs  notification.rs  oauth.rs  server.rs  stats.rs  tasks.rs  users.rs  webdav.rs
src/api/auth/: login.rs  mod.rs  password.rs  profile.rs  register.rs  two_factor.rs  types.rs
src/api/extract/: extractors.rs  handlers.rs  mod.rs  types.rs  utils.rs
src/api/files/: common.rs  copy_move.rs  download.rs  list.rs  mod.rs  operations.rs  upload.rs
src/api/search/: admin.rs  mod.rs  query.rs  types.rs
src/api/settings/: geoip.rs  mod.rs  site.rs  types.rs
src/api/shares/: admin.rs  mod.rs  public.rs  types.rs
src/drivers/: mod.rs
src/drivers/ftp/: mod.rs
src/drivers/onedrive/: driver.rs  mod.rs  oauth.rs
src/drivers/quark/: mod.rs
src/search/: db_index.rs  engine.rs  file_index.rs  mod.rs  schema.rs  tokenizer.rs
src/server/: config.rs  mod.rs  webdav.rs
src/storage/: local_factory.rs  manager.rs  mod.rs
src/task/: manager.rs  mod.rs  models.rs  types.rs
