[package]
name = "yaolist"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7.4", features = ["multipart", "macros"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
anyhow = "1.0.80"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
async-trait = "0.1.77"
once_cell = "1.19.0"
chrono = { version = "0.4.34", features = ["serde"] }
uuid = { version = "1.7", features = ["v4"] }
futures = "0.3"
mime_guess = "2.0.4"
md-5 = "0.10.6"
sha1 = { version = "0.10.6", features = ["std"] }
hex = "0.4.3"
base64 = "0.21.7"
tempfile = "3.10.1"

# 新增依赖
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bcrypt = "0.15"
rand = "0.8"
urlencoding = "2.1"
async-stream = "0.3"
tower = { version = "0.4", features = ["util"] }
suppaftp = { version = "5.2", features = ["async-native-tls"] }
encoding_rs = "0.8"
futures-lite = "2.1"
digest = "0.10"
rust-embed = { version = "8.0", features = ["debug-embed"] }
rust-s3 = { version = "0.35.1", default-features = false, features = ["tokio-rustls-tls"] }

[[bin]]
name = "yaolist"
path = "main.rs"
