[package]
name = "yaolist"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7.4", features = ["multipart", "macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
anyhow = "1.0.80"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = { version = "0.4.34", features = ["serde"] }
uuid = { version = "1.7", features = ["v4"] }
bcrypt = "0.15"
jsonwebtoken = "9.0"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
async-trait = "0.1.77"
futures = "0.3"
async-stream = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19.0"
futures-lite = "2.1"
encoding_rs = "0.8"
mime_guess = "2.0.4"
md-5 = "0.10.6"
sha1 = { version = "0.10.6", features = ["std"] }
hex = "0.4.3"
base64 = "0.21.7"
rand = "0.8"
url = "2.5"
urlencoding = "2.1"
regex = "1.10"
serde_urlencoded = "0.7"
digest = "0.10"
tempfile = "3.10.1"
suppaftp = { version = "5.2", features = ["async-native-tls"] }
rust-embed = { version = "8.0", features = ["debug-embed"] }
rust-s3 = { version = "0.35.1", default-features = false, features = ["tokio-rustls-tls"] }

# 天翼云盘驱动依赖
rsa = "0.9"
hmac = "0.12"
aes = "0.8"
block-modes = "0.9"

# 新增定时任务相关依赖
tokio-cron-scheduler = "0.9"
cron = "0.12"

[[bin]]
name = "yaolist"
path = "main.rs" 