[package]
name = "yaolist-backend"
version = "1.0.2"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
libloading = "0.8"
bcrypt = "0.15"
tower-cookies = "0.10"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
lazy_static = "1.4"
mime_guess = "2.0"
urlencoding = "2.1"
tokio-util = { version = "0.7", features = ["io", "io-util"] }
zip = "2.1"
tar = "0.4"
flate2 = "1.0"
sevenz-rust = "0.6"
futures = "0.3"
encoding_rs = "0.8"
rayon = "1.10"
regex = "1.10"
tempfile = "3.10"
fs2 = "0.4"
jieba-rs = "0.7"
once_cell = "1.19"
parking_lot = "0.12"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }
reqwest = { version = "0.11", features = ["json", "stream", "cookies", "multipart"] }
url = "2.5"
hmac = "0.12"
sha1 = "0.10"
md5 = "0.7"
base64 = "0.21"
totp-rs = { version = "5.5", features = ["qr"] }
maxminddb = "0.24"
num_cpus = "1.16"
# WebDAV server
dav-server = "0.7"
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1.5"
suppaftp = "6.0"
ftp-rs = "0.2.0"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
captcha = "0.0.9"
rsa = "0.9"
aes = "0.8"
cbc = "0.1"
p256 = { version = "0.13", features = ["ecdh"] }
num-bigint = "0.4"
spki = "0.7"
quick-xml = { version = "0.31", features = ["serde", "serialize"] }
rust-embed = "8.2"
# SMB/CIFS 使用系统原生支持（Linux CIFS 挂载 / Windows UNC 路径）
# WebDAV支持
tokio-stream = "0.1"
# S3对象存储支持（使用native-tls避免cmake/nasm依赖）
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-native-tls"] }
# Windows API (用于SMB空间查询)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

# Unix/Linux API (用于本地存储空间查询)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
chrono = "0.4"

[lib]
name = "yaolist_backend"
path = "src/lib.rs"

[[bin]]
name = "yaolist-backend"
path = "src/main.rs"
